Upgrade to Springboot 3 (#804)
* Separate server module

Signed-off-by: frank chen <frank.chen021@outlook.com>

* Fix pom

* Update component

* Update agent

* Fix feign dependency

* Fix webflux dependency

* Update docker file to support JRE17

* Migrate to SpringBoot 3

* Migrate 'profiles.include'

* Update jOOQ to springboot 3.0 matched release

* Migrate web configuration

* Fix URL

* Disable default HikariCP

* Separate agent build

* Remove extra change

* Remove extra change

* Use the latest jOOQ API

* Use latest jOOQ

* Update to SpringBoot 3.3

* Fix spotbugs

* Fix spotbugs

* Update nacos doc

* Eliminate warning

* Remove extra null check found by spotbugs because if exception is raised, a null will be returned too

* Adapt to spring security 6

* Adapt to springboot 3

* Replace javax.validation to jakarta.validation

* Defer the instance retrieving

* Adapt latest jOOQ API

* Remove redundant check

* Fix timestamp support for CK

* Adapt to new security API to eliminate warning

* Expose actuator/info and actuator/health explicitly

* Update jOOQ version

Signed-off-by: frank chen <frank.chen021@outlook.com>

* Handle trailing slash in URL to be compatible with previous release

* Fix checkstyle

* Update LICENSE

* Clean code

* Remove accidental change

* Replace javax.annotation.Nullable with jakarta.annotation.Nullable

---------

Signed-off-by: frank chen <frank.chen021@outlook.com>